--- a/module_4/bai_tap/src/main/java/ss5/excercisee/exercise1_blog/build.gradle
+++ b/module_4/bai_tap/src/main/java/ss5/excercisee/exercise1_blog/build.gradle
@@ -1,10 +1,10 @@
 plugins {
-    id 'org.springframework.boot' version '2.6.11'
-    id 'io.spring.dependency-management' version '1.0.14.RELEASE'
+    id 'org.springframework.boot' version '2.7.3'
+    id 'io.spring.dependency-management' version '1.0.13.RELEASE'
     id 'java'
 }
 
-group = 'com.example'
+group = 'vn.codegym'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
@@ -17,6 +17,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     runtimeOnly 'mysql:mysql-connector-java'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
