--- a/module_4/bai_tap/src/main/java/ss6/exerice/exercise_1_reply_blog/build.gradle
+++ b/module_4/bai_tap/src/main/java/ss6/exerice/exercise_1_reply_blog/build.gradle
@@ -1,7 +1,7 @@
 plugins {
+    id 'org.springframework.boot' version '2.6.11'
+    id 'io.spring.dependency-management' version '1.0.13.RELEASE'
     id 'java'
-    id 'org.springframework.boot' version '2.7.6'
-    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
 group = 'com.vinhodas'
@@ -17,7 +17,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    runtimeOnly 'com.mysql:mysql-connector-j'
+    runtimeOnly 'mysql:mysql-connector-java'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
